# multipacman

./: .gitignore  CMakeLists.txt
maps/: arena.map  default.map  small.map
src/: ConnectScreen.cpp  ConnectScreen.h  ConsoleRenderer.cpp  ConsoleRenderer.h  Dot.cpp  Dot.h  Entity.h  Game.cpp  Game.h  GameClient.cpp  GameScreen.cpp  GameServer.cpp  Ghost.h  Grid.h  MainMenuScreen.cpp  MainMenuScreen.h  Map.h  NetworkDefs.h  Player.cpp  Player.h  Renderer.h  Screen.h  main.cpp  main_client.cpp  main_server.cpp  map.cpp
src/model/: AmbusherStrategy.cpp  AmbusherStrategy.h  ChaserStrategy.cpp  ChaserStrategy.h  Dot.h  Entity.cpp  Game.cpp  Game.h  Ghost.cpp  Ghost.h  GhostStrategy.h  Grid.h  Map.cpp  Map.h  PatrolStrategy.cpp  PatrolStrategy.h  Player.cpp  Player.h  RandomStrategy.h  map.cpp
src/model/entity/: Dot.cpp  Dot.h  Entity.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h
src/model/strategy/: AmbusherStrategy.cpp  BotStrategy.cpp  BotStrategy.h  RandomStrategy.cpp
src/network/: ClientConnection.cpp  ClientConnection.h  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  Protocol.h
src/rendering/: ConsoleRenderer.cpp  ConsoleRenderer.h  Renderer.h  SfmlRenderer.cpp  SfmlRenderer.h
src/ui/: ConnectScreen.cpp  ConnectScreen.h  Constants.h  GameScreen.cpp  GameScreen.h  LobbyScreen.cpp  LobbyScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Screen.h
